pa5/useful_commands.txt
# check port mongodb is running
sudo lsof -iTCP -sTCP:LISTEN | grep mongo
sudo kill -9 <mongo_pid>

rs.add('localhost',27018)
rs.add('localhost',27019)

rsconf={ 
		_id:"rs1","version":1, 
		members:[{
			 		_id:0,
			 	   host:"localhost:27017" }
			 	   ]}

(db.animal.find({name:'cats'}).forEach(printjson))

var mycursor = db.animal.find()
myDocument= mycursor.hasNext()?mycursor.next():null

############ for debug #############
Step 1: Remove lock file.
sudo rm /var/lib/mongodb/mongod.lock

Step 2: Repair mongodb. 
sudo mongod --repair 

Step 3: start mongodb.
sudo start mongodb 
or
sudo service mongodb start

Step 4: Check status of mongodb.
sudo status mongodb 
or   
sudo service mongodb status

Step 5: Start mongo console.
mongo 



############ for testing message pulling #############
 from pymongo import MongoClient
>>> client = MongoClient('ip-172-31-25-62',27017)
>>> db.client.test1
Traceback (most recent call last):
  File "<stdin>", line 1, in <module>
NameError: name 'db' is not defined
>>> db=client.test1
>>> print(db.mytest.count())
3
>>> db.mytest.insert_one({'x':1})
<pymongo.results.InsertOneResult object at 0x7fa6440d9308>
>>> print(db.mytest.count())
4
>>> db.mytest.insert_one({'x':1s})
  File "<stdin>", line 1
    db.mytest.insert_one({'x':1s})
                               ^
SyntaxError: invalid syntax
>>> db.mytest.insert_one({'x':14})
<pymongo.results.InsertOneResult object at 0x7fa6440d9348>
>>> db.mytest.insert_one({'counter':5,'flag':'syn'})

db = client.test1
post = db.mytest.find_one({'counter':5,'flag':'syn'})
print(str(post['counter']) + post['flag'])
print(db.mytest.find_one({'x':14})['x'])



########3 increase base latency to 200ms on the eth0 interface

sudo tc qdisc add dev eth0 root netem delay 200ms

####### see the current rule

sudo tc qdisc show dev eth0

#######  delete the current rule

sudo tc qdisc del dev eth0 root

########## introduce packet loss

sudo tc qdisc add dev eth0 root netem loss 10%

########## introduce packet corruption

sudo tc qdisc add dev eth0 root netem corrupt 5%

########## or limit bandwidth

sudo tc qdisc add dev eth0 root tbf rate 1mbit burst 32kbit limit 10000

sudo tc qdisc del dev eth0 root

./net_setting.sh 15 10m 0.0000000001
./net_setting.sh 15 10m 0.2
./net_setting.sh 15 10m 0.4
./net_setting.sh 15 10m 0.6
./net_setting.sh 15 10m 0.8
./net_setting.sh 15 10m 1
./net_setting.sh 15 10m 1.2
./net_setting.sh 15 10m 1.4
./net_setting.sh 15 10m 1.6
./net_setting.sh 15 10m 1.8
./net_setting.sh 15 10m 2

